--- a/Lab_2/Lab2.Стариков.Николай.НПМбв_01_22.ipynb
+++ b/Lab_2/Lab2.Стариков.Николай.НПМбв_01_22.ipynb
@@ -13,7 +13,7 @@
     "from matplotlib import pyplot as plt\n",
     "import os\n",
     "\n",
-    "img = Image.open(r'D:\\1Programmirovanie\\LLM универ\\2 лаба\\panda.jpg')\n",
+    "img = Image.open('panda.jpg')",
     "w, h = img.size\n",
     "print(f\"Размер изображения: {w}x{h} пикселей\")\n",
     "\n",
