--- a/Lab_2/Lab2.Стариков.Николай.НПМбв_01_22.ipynb
+++ b/Lab_2/Lab2.Стариков.Николай.НПМбв_01_22.ipynb
@@ -30,7 +30,7 @@
     "print(f\"Количество каналов: {3 if len(x.shape) == 3 else 1}\")\n",
     "\n",
     "# Расчет размера исходного изображения в байтах\n",
-    "original_size_bytes = os.path.getsize(r'D:\\1Programmirovanie\\LLM универ\\2 лаба\\panda.jpg')\n",
+    "original_size_bytes = os.path.getsize('panda.jpg')\n",
     "print(f\"Размер исходного файла: {original_size_bytes} байт\")\n",
     "\n",
     "def compress_image_svd(image_array, r):\n",
