--- a/Lab_3/Lab3.Стариков.Николай.НПМбв_01_22.ipynb
+++ b/Lab_3/Lab3.Стариков.Николай.НПМбв_01_22.ipynb
@@ -165,7 +165,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(r'D:\\1Programmirovanie\\LLM универ\\3 лаба\\homework-practice-03-linregr\\2008.csv')\n",
+    "df = pd.read_csv('2008.csv')\n",
     "\n",
     "cancellation_counts = df['CancellationCode'].value_counts()\n",
     "most_common_cancellation = cancellation_counts.idxmax()\n",
